--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 war {
-    baseName = 'todo'
+    baseName = 'city'
     version = '1.0.0'
 }
 
